@startuml modelo-notificaciones
'  Diagrama de clases - MODELO DE DOMINIO - servicio-notificaciones
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
  BackgroundColor #E8F5E9
  BorderColor #1B5E20
  ArrowColor #37474F
}
skinparam enum {
  BackgroundColor #F5F5F5
  BorderColor #424242
}
hide circle
title Modelo de Dominio - Servicio de Notificaciones

class Notificacion {
  - id : UUID
  - destinatario : String
  - mensaje : String
  - fechaCreacion : LocalDateTime
  - fechaEnvio : LocalDateTime
  + marcarEnviada()
  + marcarFallida()
}

enum EstadoNotificacion {
  PENDIENTE
  ENVIADA
  FALLIDA
}

enum TipoMedioNotificacion {
  EMAIL
  SMS
  WHATSAPP
}

enum TipoEvento {
  INACTIVIDAD_DONANTE
  ASIGNACION_DONACION_ENTIDAD
  ASIGNACION_DONACION_DONANTE
  MISION_CUMPLIDA
  CAMBIO_CATEGORIA
}

Notificacion --> EstadoNotificacion : estado
Notificacion --> TipoMedioNotificacion : medio
Notificacion --> TipoEvento : evento

@enduml
